# definitions_forms

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: linting.yaml
src/: main.py
src/api/v1/: __init__.py  views.py
src/core/: config.py  db_helper.py
src/core/schemas/: schemas.py
src/core/utils/: form.json  form_templates.py  logging_config.py  utils.py
tests/: conftest.py  mongo_client.py  test_template_form.py
